@@ -1,3 +1,7 @@
+== LATEST
+
+ * Support for assigning one attachment to another.
+
 == 0.2.1 2010-07-15
 
  * Path/URL templates may be symbols specifying methods to call to
